--- a/src/app/components/usuario-forms/usuario-forms.component.html
+++ b/src/app/components/usuario-forms/usuario-forms.component.html
@@ -14,15 +14,18 @@
           </nav>
 
           <div class="content">
-            <form *ngIf="flag" class="col-8">
+            <form *ngIf="flag" class="col-8" #usuariosForm="ngForm">
               <div class="opciones">
                 <div class="roles">
                   <div class="form-floating mb-3" *ngIf="cuentaServicio.mostrarUs" >
                     <select id="rol" class="form-select" aria-label="Default select example" [(ngModel)]="rolE"
-                      name="rolE">
+                      name="rolE"  #rol="ngModel">
                       <option >ADMINISTRADOR</option>
                       <option >VENDEDOR</option>
                     </select>
+                    <div class="alert alert-danger" *ngIf="rol.invalid && rol.touched || rol.invalid && usuariosForm.submitted">
+                      Opción Requerida
+                    </div>
                     <label for="floatingInput">ROL</label>
                   </div>
                 </div>
@@ -31,10 +34,13 @@
                 <div class="habilitar">
                   <!--opcines de habilitar-->
                   <div class="form-floating mb-3" *ngIf="cuentaServicio.mostrarUs">
-                    <select class="form-select" [(ngModel)]="estado" name="estado">
+                    <select class="form-select" [(ngModel)]="estado" name="estado" #habilitar="ngModel">
                       <option selected>Habilitado</option>
                       <option>Deshabilitado</option>
                     </select>
+                    <div class="alert alert-danger" *ngIf="habilitar.invalid && habilitar.touched || habilitar.invalid && usuariosForm.submitted">
+                      Opción Requerida
+                    </div>
                     <label for="floatingInput">ESTADO</label>
                   </div>
                 </div>
@@ -46,14 +52,22 @@
                   <div class="columna1">
                     <div class="form-floating mb-3">
                       <input type="text" class="form-control" id="ci" [(ngModel)]="cuenta.usuario.ci" name="ci" maxlength="10"
-                      onkeypress="return (event.charCode >= 48 && event.charCode <= 57)">
+                      onkeypress="return (event.charCode >= 48 && event.charCode <= 57)"
+                      required #cedula="ngModel">
+                      <div class="alert alert-danger" *ngIf="cedula.invalid && cedula.touched || cedula.invalid && usuariosForm.submitted">
+                        La Cédula Es Requerida
+                      </div>
                       <label for="floatingInput">CÉDULA</label>
                     </div>
                   </div>
                   <div class="columna2">
                     <div class="form-floating mb-3">
                       <input type="text" class="form-control" id="nombre" [(ngModel)]="cuenta.usuario.nombres"
-                        name="nombre"  onkeypress="return ((event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122))">
+                        name="nombre"  onkeypress="return ((event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122))"
+                        required #nombre="ngModel">
+                        <div class="alert alert-danger" *ngIf="nombre.invalid && nombre.touched || nombre.invalid && usuariosForm.submitted">
+                          El Nombre Es Requerido
+                        </div>
                       <label for="floatingInput">NOMBRE</label>
                     </div>
                   </div>
@@ -62,14 +76,21 @@
                   <div class="columna1">
                     <div class="form-floating mb-3">
                       <input type="text" class="form-control" id="apellidos" [(ngModel)]="cuenta.usuario.apellidos"
-                        name="apellidos"  onkeypress="return ((event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122))">
+                        name="apellidos"  onkeypress="return ((event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122))"
+                        required #apellido="ngModel">
+                        <div class="alert alert-danger" *ngIf="apellido.invalid && apellido.touched || apellido.invalid && usuariosForm.submitted">
+                          El Apellido Es Requerido
+                        </div>
                       <label for="floatingInput">APELLIDO</label>
                     </div>
                   </div>
                   <div class="columna2">
                     <div class="form-floating mb-3">
                       <input type="email" class="form-control" id="email" aria-describedby="emailHelp"
-                        [(ngModel)]="cuenta.email" name="email">
+                        [(ngModel)]="cuenta.email" name="email"  required #correo="ngModel">
+                        <div class="alert alert-danger" *ngIf="correo.invalid && correo.touched || correo.invalid && usuariosForm.submitted">
+                          El Correo Es Requerido
+                        </div>
                       <label for="floatingInput">CORREO</label>
                     </div>
                   </div>
@@ -78,14 +99,21 @@
                   <div class="columna1">
                     <div class="form-floating mb-3">
                       <input type="text" class="form-control" id="telefono" [(ngModel)]="cuenta.usuario.telefono"
-                        name="telefono" maxlength="10" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)">
+                        name="telefono" maxlength="10" onkeypress="return (event.charCode >= 48 && event.charCode <= 57)"
+                        required #telefono="ngModel">
+                        <div class="alert alert-danger" *ngIf="telefono.invalid && telefono.touched || telefono.invalid && usuariosForm.submitted">
+                          El Teléfono Es Requerido
+                        </div>
                       <label for="floatingInput">TELEFONO</label>
                     </div>
                   </div>
                   <div class="columna2">
                     <div class="form-floating mb-3">
                       <input type="password" [disabled]="cuentaServicio.habilitar" class="form-control" id="contrasena"
-                        [(ngModel)]="cuenta.contrasena" name="contrasena" >
+                        [(ngModel)]="cuenta.contrasena" name="contrasena"  required #password="ngModel" >
+                        <div class="alert alert-danger" *ngIf="password.invalid && password.touched || password.invalid && usuariosForm.submitted">
+                          La Contraseña Es Requerida
+                        </div>
                       <label for="floatingInput">CONTRASEÑA</label>
                     </div>
                   </div>
@@ -94,7 +122,7 @@
               <br>
               <button
                 style="background-color: rgb(20, 146, 219); border-color:rgb(20, 146, 219); margin-top: 1%; margin-left: 30%;"
-                type="submit" class="btn btn-primary" (click)='create()'
+                type="submit" class="btn btn-primary" (click)='create(usuariosForm)'
                 *ngIf="!cuenta.idCuenta else elseBlock ">Guardar</button>
 
               <button
