--- a/src/app/components/usuarios/usuarios.component.html
+++ b/src/app/components/usuarios/usuarios.component.html
@@ -12,7 +12,8 @@
           onkeypress="return (event.charCode >= 48 && event.charCode <= 57)" [(ngModel)]="ced" name="ced" />
 
         <input *ngIf="cuenta.opcion == '2'" type="search" class="form-control" placeholder="NOMBRE" aria-label="Search"
-        onkeypress="return ((event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122))"[(ngModel)]="search" name="search" />
+        onkeypress="return (event.charCode == 209 || event.charCode == 241 || event.charCode == 32 || (event.charCode >= 65 && event.charCode <= 90) || (event.charCode >= 97 && event.charCode <= 122))"
+        [(ngModel)]="search" name="search" />
 
         <input *ngIf="cuenta.opcion == '3'" type="email" class="form-control" placeholder="CORREO" aria-label="Search"
         [(ngModel)]="correo" name="correo" />
