--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -152,7 +152,10 @@
 
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <div class="container">
-    <a class="navbar-brand" href="#">GEOMUNDO</a>
+    <a href="">
+      <img src="../assets/icon_Logo_dark.png" alt="logo libreria" width="40%">
+    </a>
+    
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -192,10 +195,16 @@
         <i class="bi bi-journal-bookmark"></i>
         Reservas</li>
       </a>
-      <a [routerLink]="['/reporte_diario']"><li>
-        <i class="bi bi-graph-up-arrow"></i>
-        Reporte Diario</li>
-      </a>
+      <li *ngIf="userloginService.hasRole('ROLE_ADMINISTRADOR')"  class="nav-item dropdown" id="submenu">
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <i class="bi bi-graph-up-arrow"></i>
+          Reportes
+        </a>
+        <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <li><a class="dropdown-item" [routerLink]="['/reporte_diario']">Reporte Diario</a></li>
+          <li><a class="dropdown-item" [routerLink]="['/reporte']">Reporte Personalizado</a></li>
+         </ul>
+      </li>
       <li class="nav-item dropdown" id="submenu">
         <a class="nav-link dropdown-toggle"  id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
           <i class="bi bi-book"></i>
