--- a/src/app/components/reporte-diario/reporte-diario.component.html
+++ b/src/app/components/reporte-diario/reporte-diario.component.html
@@ -2,17 +2,18 @@
 <div class="contenedor">
 
     <div class="p-0 container-fluid">
-        <div class="d-flex flex-column justify-content-center align-items-start my-2"> 
-            <div class="row ms-1 p-0">
-                <div class="col-3">
-                    <h1>REPORTE DIARIO</h1>
+        <div class="d-flex flex-column flex-wrap justify-content-center align-items-start my-2"> 
+            <div class="row container-fluid">    
+                <div class="ps-2 m-0 col-6">
+                    <h1 class="m-0">REPORTE DIARIO</h1>
                 </div>
-                <div class="col-auto">
-                    <button class="btn" (click)="this.createPdf()">
+                <div class="col-6 d-flex justify-content-end align-items-center">
+                    <button class="btn impresion" (click)="this.createPdf()">
+                        <i class="bi bi-printer-fill" style="color:white"></i>
                         Imprimir
                     </button>
                 </div>
-            </div>           
+            </div>       
             <div class="container-fluid info">
                 <div class="row mt-3">
                     <h3><strong>Generado Por: </strong>{{this.cuenta.usuario.nombres}} {{this.cuenta.usuario.apellidos}}</h3>
