--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -168,7 +168,7 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
             <li><a class="dropdown-item" [routerLink]="['/registroUsuarios',userloginService.cuenta.idCuenta]">Mi Perfil</a></li>
-            <li><a class="dropdown-item" (click)="logout()">Logout</a></li>
+            <li><a class="dropdown-item" (click)="logout()">Cerrar Sesión</a></li>
             </ul>
         </li>
       </ul>
@@ -202,7 +202,7 @@
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
           <li><a class="dropdown-item" [routerLink]="['/reporte_diario']">Reporte Diario</a></li>
-          <li><a class="dropdown-item" [routerLink]="['/reporte']">Reporte Personalizado</a></li>
+          <li><a class="dropdown-item" [routerLink]="['/reporte']">Reportes Personalizados</a></li>
          </ul>
       </li>
       <li class="nav-item dropdown" id="submenu">
