--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -17,7 +17,7 @@
             {{userloginService.cuenta.email}}
           </a>
           <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <li><a class="dropdown-item" [routerLink]="['/registroUsuarios',userloginService.cuenta.idCuenta]">Mi Perfil</a></li>
+            <li><a (click)="cuentaService.mostrarUs=false" class="dropdown-item" [routerLink]="['/registroUsuarios',userloginService.cuenta.idCuenta]">Mi Perfil</a></li>
             <li><a class="dropdown-item" (click)="logout()">Cerrar Sesión</a></li>
             </ul>
         </li>
@@ -70,7 +70,7 @@
           Usuarios
         </a>
         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-          <li><a (click)="cuentaService.mostrarUs=true" (click)="cuentaService.habilitar=true" class="dropdown-item" [routerLink]="['/usuarios']">Nomina de Usuarios</a></li>
+          <li><a (click)="cuentaService.mostrarUs=true" (click)="cuentaService.habilitar=true" class="dropdown-item" [routerLink]="['/usuarios']">Nómina de Usuarios</a></li>
           <li><a (click)="cuentaService.mostrarUs=true" (click)="cuentaService.habilitar=false" class="dropdown-item" [routerLink]="['/registroUsuarios']">Registro de Usuarios</a></li>
          </ul>
       </li>
