--- a/src/app/components/list-reserva/detalle-reserva/detalle-reserva.component.html
+++ b/src/app/components/list-reserva/detalle-reserva/detalle-reserva.component.html
@@ -26,7 +26,9 @@
             <li class="list-group-item" style="display: flex;" >
                <!-- <div class="form-floating mb-3"> -->
                 <label for="abono" class="form-label">NUEVO ABONO:</label>
-                 <input min="0" style="width: 100px;height:40px; margin-left: 25px;" type="number" class="form-control" [(ngModel)]="nuevoA" name="nuevoA" > <!--  -->
+                 <input  min="0" max="99999" onKeyDown="if(this.value.length==5 && event.keyCode!=8) return false;"
+                 style="width: 100px;height:40px; margin-left: 25px;" type="number" class="form-control" 
+                 [(ngModel)]="nuevoA" name="nuevoA" onkeypress="return event.charCode != 45 && event.charCode != 43"  > <!--  -->
                 
                <!-- </div> -->
                <button class="btn btn-success" style="margin-left:25px; height:40px" (click)="suma()">Añadir</button>
